# fitapp

./: .gitignore  Dockerfile  README.md  app.py  dockerfile  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/web/: app.py
apps/web/pages/: 1_Onboarding.py  2_Plan.py  3_Export.py  4_Weekly_Review.py
data/: exercises.json
data/index/v1/: embeddings.npy  faiss.index  meta.parquet
data/logs/: llm_2025-10-06.jsonl
data/processed/: chunks.jsonl  docs.jsonl  schema.json
src/fitapp_core/: energy.py  generator.py  init.py  models.py  models_v11.py  plan_v1.py  plan_v11.py
src/fitapp_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fitapp_core/exporters/: json_csv.py  pdf.py
src/fitapp_core/rag/: llm.py  prompts.py  retriever.py
tests/: conftest.py  test_generator.py
tests/e2e/: test_app_flow_apptest.py  test_generate_and_export_smoke_v11.py
tests/legacy/: conftest.py  test_generator_v0.py  test_plan_v1.py
tests/unit/: test_energy.py  test_exporters.py  test_exporters_v11.py  test_models.py  test_models_v11.py  test_plan_v1.py  test_plan_v11.py
