[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitapp-core"
version = "0.1.0"
description = "Core logic for Fitapp workout plan generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.26"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fitapp_core*"]
